--- a/src/components/list/index.scss
+++ b/src/components/list/index.scss
@@ -1,14 +1,19 @@
+@import '../../_foundation/globalVariables.scss';
+
 .list {
+  margin-top: 20px;
   border-radius: 4px;
   border-style: none;
-  border: 2px solid red;
+  border: 1px solid $base_color_level1_green;
 }
 
 .item {
-  border: 1px solid green;
+  border-bottom: 2px dashed $base_color_level2_green;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
 
 .foundLanguage {
