--- a/src/App.style.scss
+++ b/src/App.style.scss
@@ -1,4 +1,4 @@
-
+@import './_foundation/globalVariables.scss';
 
 .container {
   margin: 0 auto;
@@ -12,4 +12,6 @@
 .input {
   width: 200px;
   height: 32px;
+  border-radius: 4px;
+  border: 1px solid grey;
 }
