--- a/src/_foundation/globalVariables.scss
+++ b/src/_foundation/globalVariables.scss
@@ -2,4 +2,6 @@ $base_color_level1_green : #51E2F5;
 $base_color_level2_green: #9DF9EF;
 $base_color_white: #EDF7F6;
 $base_color_level1_red: #FFABB6;
-$base_color_level2_red: #a28089
+$base_color_level2_red: #a28089;
+// word
+$base_word_red: #FF1D58
