--- a/src/components/list/index.scss
+++ b/src/components/list/index.scss
@@ -5,6 +5,11 @@
   border-radius: 4px;
   border-style: none;
   border: 1px solid $base_color_level1_green;
+  width: 60%;
+
+  .item:last-of-type {
+    border-bottom: none;
+  }
 }
 
 .item {
@@ -18,6 +23,11 @@
 
 .foundLanguage {
   font-weight: 500;
+  em {
+    color: $base_word_red;
+    font-weight: 700;
+    font-size: large;
+  }
 }
 
 .targetLanguage {
