fixing responsive | define in css

--- a/src/_foundation/globalVariables.scss
+++ b/src/_foundation/globalVariables.scss
@@ -4,4 +4,8 @@ $base_color_white: #EDF7F6;
 $base_color_level1_red: #FFABB6;
 $base_color_level2_red: #a28089;
 // word
-$base_word_red: #FF1D58
+$base_word_red: #FF1D58;
+// grid system
+$screen_size_sm: 768px;
+$screen_size_md: 992px;
+$screen_size_lg: 1200px;
