--- a/src/components/list/index.scss
+++ b/src/components/list/index.scss
@@ -6,7 +6,7 @@
   margin-top: 20px;
   border-radius: 4px;
   border-style: none;
-  border: 1px solid $base_color_level1_green;
+  border: 1px solid white;
   width: 100%;
 
   @media screen and (min-width: $screen_size_sm) {
@@ -19,16 +19,15 @@
 }
 
 .item {
-  border-bottom: 2px dashed $base_color_level2_green;
+  border-bottom: 2px dashed white;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 4px;
-  padding-bottom: 4px;
+  padding: 4px 8px;
 }
 
 .foundLanguage {
-  font-weight: 500;
+  font-weight: 700;
   em {
     color: $base_word_red;
     font-weight: 700;
