refactor: enhance hooks to not render too many times | fixing css overriding

--- a/src/App.style.scss
+++ b/src/App.style.scss
@@ -12,3 +12,9 @@ h1 {
   display: flex;
   justify-content: center;
 }
+
+.listOverriding {
+  @media screen and (min-width: $screen_size_sm) {
+    width: 100%;
+  }
+}
