--- a/src/App.style.scss
+++ b/src/App.style.scss
@@ -8,6 +8,10 @@ h1 {
   color: brown
 }
 
+.h1Extension {
+  font-size: 1.5em;
+}
+
 .centerFlex {
   display: flex;
   justify-content: center;
@@ -17,4 +21,24 @@ h1 {
   @media screen and (min-width: $screen_size_sm) {
     width: 100%;
   }
+}
+
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(107, 104, 104, 0.3);
+	background-color: rgba(56, 56, 56, 0.3);
 }
